# nexus

./: CMakeLists.txt  README.md
include/: nexus.h
resources/: config.json  resources.qrc
src/: main.cpp
src/api/: AccountManagementClient.hpp  RestClientBase.hpp
src/eventbus/: Beepboop.cpp  Beepboop.hpp  Event.hpp  EventAddresses.hpp
src/ui/: main_ui.cpp  main_ui.h
src/ui/components/: NewChatDialog.hpp  ProfileDialog.hpp  SettingsDialog.hpp
src/util/: key_gen.hpp
